Format the modal properly, fixing unalignments

--- a/src/app/modal/modal.component.scss
+++ b/src/app/modal/modal.component.scss
@@ -80,14 +80,13 @@
 
       color: #5f5f5f;
       font-size: 0.9rem;
-
     }
   }
 
-  &-basic-info{
+  &-basic-info {
     width: 100%;
 
-    display: flex; 
+    display: flex;
     flex-direction: column;
 
     justify-content: space-between;
@@ -96,23 +95,48 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      margin: 1em 0;
-      input {
-        display: block;
+      align-items: stretch;
 
-    border: 1px #E9E9E9 solid;
-    padding: 1em;
-    font-family: CircularStd;
-    background-color: #F9F9F9;
-    max-width: 40% !important;
+      input,
+      select {
+        width: 100%;
+        border: 1px #e9e9e9 solid;
+        padding: 1em;
+        font-family: CircularStd;
+        background-color: #f9f9f9;
       }
     }
   }
-  
 
   &-buttons {
     float: right;
     margin-bottom: 0;
+  }
+}
+
+.main-form {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+
+  font-size: 1em;
+
+  color: #5f5f5f;
+}
+
+.input-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 1em;
+  input,
+  select {
+    color: #5f5f5f;
+    width: 100%;
+    flex-grow: 1;
+    display: block;
   }
 }
 
@@ -145,7 +169,6 @@
     padding: 0 0.5rem;
   }
 }
-
 
 .image-square {
   width: 100px; /* width of container */
